Fixed the alignment issues

--- a/reactive-frontend/src/client/app/styles.css
+++ b/reactive-frontend/src/client/app/styles.css
@@ -40,7 +40,8 @@ body
 }
 
 #contentContainer {
-	max-height: 50vh;
+	min-height: 40vh;
+	max-height: 60vh;
 	overflow-y: scroll;
 	background-color: rgba(0, 0, 0, 0.7);
 	color: rgba(255,255,255,.8);
